--- a/src/blog/posts/2022-08-15-prueba.md
+++ b/src/blog/posts/2022-08-15-prueba.md
@@ -3,10 +3,10 @@ tags:
   - post
   - linux
 layout: post.njk
-title: Prueba
+title: " Hola Prueba"
 excerpt: Prueba
-featuredImage: /assets/images/mask.png
-featuredImageMini: /assets/images/mask.png
+featuredImage: /dist/assets/images/mask.png
+featuredImageMini: /dist/assets/images/mask.png
 imageAlt: mask
 ---
-# Prueba de markdown
+# Prueba de markdown hola
