Update Categoría en español “2022-08-14-blender”

--- a/src/es/blog/categories/2022-08-14-blender.md
+++ b/src/es/blog/categories/2022-08-14-blender.md
@@ -1,8 +1,9 @@
 ---
+categorie: blender
+tags:
+  - categorieEs
 title: Blender
-tags: ["featuredCategorieEs", "categorieEs"]
-featuredImage: /assets/images/blender-logo.png
 description: La suite de creación 3D gratuita y de código abierto.
 color: 313131
-categorie: blender
+featuredImage: /assets/images/blender-logo.png
 ---
