Update Categoría en inglés “2022-08-14-blender”

--- a/src/blog/categories/2022-08-14-blender.md
+++ b/src/blog/categories/2022-08-14-blender.md
@@ -1,8 +1,9 @@
 ---
+categorie: blender
+tags:
+  - categorie
 title: Blender
-tags: ["featuredCategorie", "categorie"]
-featuredImage: /assets/images/blender-logo.png
 description: The free an open-source 3D creation suite.
 color: 313131
-categorie: blender
+featuredImage: /assets/images/blender-logo.png
 ---
